src/objects/SNI_FL_Message_Status__c.object
<CustomObject>
    <description>Stores information regarding whether user click the message or not. This object will store

1. Lookup to (SNI FL Message)
2. Lookup to Agent Object
3. IsRead ( To check whether user read or not)</description>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores related agent ID</description>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SNI_FL_Message_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsRead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field hods whether user read the message or not</description>
        <label>IsRead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link between SNI_FL_Message object</description>
        <label>SNI FL Message</label>
        <referenceTo>SNI_FL_Message__c</referenceTo>
        <relationshipLabel>SNI FL Message Statuses</relationshipLabel>
        <relationshipName>SNI_FL_Message_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SNI FL Message Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsRead__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Agent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SNI FL  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SNI FL Message Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>